@@ -154,12 +154,12 @@ REPOSITORY
     <https://github.com/tupinek/Unicode-Block-Ascii>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2013-2014 Michal Špaček
+     © 2013-2014 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
