@@ -4,6 +4,7 @@
  - Add tests from Unicode::Block.
  - Update LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.18 version.
+ - Update author name.
 
 0.01 2014-08-23T15:00:01+02:00
  - First version.
